--- a/client/src/components/Header/Header.scss
+++ b/client/src/components/Header/Header.scss
@@ -4,6 +4,9 @@ header {
   align-items: center;
   padding: 10px 40px;
   background-color: #2c3e50;
+  a {
+    color: #fff !important;
+  }
   .brand {
     font-size: 1.8rem;
     font-weight: bold;
