feat: added pdp page that loads with static data

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,6 +1,7 @@
 .app {
   main {
-    padding: 0px 40px;
-    min-height: 90vh;
+    padding: 0px 120px;
+    min-height: 70vh;
+    margin: 40px 0px;
   }
 }
