--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -10,6 +10,10 @@ body {
 
   a {
     text-decoration: none;
+    font-family: 'Montserrat', sans-serif;
     color: #000;
+  }
+  button {
+    font-family: 'Montserrat', sans-serif;
   }
 }
