--- a/client/src/pages/Pdp/Pdp.scss
+++ b/client/src/pages/Pdp/Pdp.scss
@@ -1,5 +1,8 @@
 .pdp {
   margin: 100px 0px;
+  .spinner {
+    margin: 100px auto 0px;
+  }
   .pdp-container {
     display: flex;
     justify-content: space-between;
@@ -32,6 +35,25 @@
           padding: 20px 0px;
           border-bottom: 1px solid #eee;
         }
+        .status {
+          font-weight: bolder;
+          &__in {
+            color: #2c3e50;
+          }
+          &__out {
+            color: #e74c3c;
+          }
+        }
+        .qty {
+          padding: 5px;
+          select {
+            border: none;
+            margin-right: 10px;
+            &:focus-visible {
+              outline: none;
+            }
+          }
+        }
         button {
           width: 100%;
           border: none;
@@ -39,6 +61,10 @@
           cursor: pointer;
           background-color: #2c3e50;
           color: #fff;
+          &:disabled {
+            background-color: #384f66;
+            cursor: not-allowed;
+          }
         }
       }
     }
