fix: few bugs related to redirection and styles

--- a/client/src/components/Alert/Alert.scss
+++ b/client/src/components/Alert/Alert.scss
@@ -1,6 +1,7 @@
 .alert {
   padding: 5px 5px 5px 20px;
   margin: 20px 0px;
+  width: 100%;
   &.alert__error {
     border: 1px solid #e74c3c;
     background-color: #fad7d3;
