--- a/client/src/pages/OrderSummary/OrderSummary.scss
+++ b/client/src/pages/OrderSummary/OrderSummary.scss
@@ -53,6 +53,7 @@
     display: flex;
     flex-direction: column;
     row-gap: 20px;
+    width: 350px;
     button {
       width: 100%;
       border: none;
