feat: integrated all orders to display in profile page

--- a/client/src/pages/OrderDetails/OrderDetails.scss
+++ b/client/src/pages/OrderDetails/OrderDetails.scss
@@ -48,6 +48,17 @@
           }
         }
       }
+
+      &.order-details {
+        p {
+          span {
+            border: 1px solid #00cec9;
+            border-radius: 5px;
+            padding: 2px 5px;
+            background: #81ecec;
+          }
+        }
+      }
     }
   }
   .price {
