--- a/client/src/pages/Profile/Profile.scss
+++ b/client/src/pages/Profile/Profile.scss
@@ -5,7 +5,7 @@
   .spinner {
     margin: 0 auto;
   }
-  h1 {
+  h1, h2 {
     text-align: center;
   }
   .details-container {
@@ -51,6 +51,25 @@
         color: #fff;
         border: none;
         margin-bottom: 10px;
+      }
+    }
+  }
+  .orders-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    row-gap: 20px;
+    .order-card {
+      width: 850px;
+      display: flex;
+      column-gap: 30px;
+      border: 2px solid #eee;
+      padding: 30px;
+      cursor: pointer;
+      transition: scale 0.2s;
+      &:hover {
+        scale: (1.05);
       }
     }
   }
