--- a/client/src/pages/ProductsTable/ProductsTable.scss
+++ b/client/src/pages/ProductsTable/ProductsTable.scss
@@ -2,8 +2,16 @@
   .spinner {
     margin: 100px auto 0px;
   }
+  .create-btn {
+    padding: 5px;
+    background-color: #2c3e50;
+    color: #fff;
+    border: transparent;
+    cursor: pointer;
+    margin: 20px 0px;
+  }
   table {
-    margin: 40px 0px;
+    margin: 20px 0px;
     border: 2px solid #2c3e50;
     width: 1000px;
     height: 400px;
